--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "test": "jest --watchAll"
   },
   "jest": {
-    "testEnvironment": "node"
+    "testEnvironment": "node",
+    "setupFilesAfterEnv": [
+      "./api/tests/setup.js"
+    ]
   },
   "keywords": [],
   "author": "",
@@ -17,6 +20,7 @@
     "body-parser": "^1.19.0",
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
+    "fs-extra": "^8.1.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.7.0",
     "morgan": "^1.9.1",
